tests/compile/derive-invalid-ignore.stderr
error: expected `,`
 --> $DIR/derive-invalid-ignore.rs:8:20
  |
8 |     #[merge(ignore = true)]
  |                    ^
